--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -2,8 +2,8 @@
   <div class="popup-modal-background hidden">
     <div class="popup-modal">
       <button class="popup-modal-close-button" type="button">
-        <svg width="28" height="28">
-          <use href="./images/sprite.svg#icon-x-close"></use>
+        <svg width="28" height="28" class="popup-modal-close">
+          <use href="./images/sprite.svg#icon-x-close-vad"></use>
         </svg>
       </button>
       <div class="book-info-container">
