--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -2,7 +2,7 @@
   <div class="popup-modal-background hidden">
     <div class="popup-modal">
       <button class="popup-modal-close-button" type="button">
-        <svg width="28" height="28">
+        <svg class="svg-pop-up" width="24" height="24">
           <use href="./images/sprite.svg#icon-x-close"></use>
         </svg>
       </button>
