--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -18,7 +18,7 @@
           <span class="slider round"></span>
         </label>
         <svg class="nav-burger" width="28" height="28">
-          <use href="./images/sprite.svg#icon-x-close"></use>
+          <use href="./images/sprite.svg#icon-x-close-vad"></use>
         </svg>
         <div class="mob-hidden main-nav-block">
           <ul class="site-nav-menu"></ul>
