--- a/src/css/header.css
+++ b/src/css/header.css
@@ -56,6 +56,9 @@
 
 .ico-burger {
   stroke: currentColor;
+  transition-property: fill stroke color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ico-burger:hover,
 .ico-burger:focus {
