--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -11,6 +11,9 @@
 .nav-burger {
   fill: currentColor;
   stroke: currentColor;
+  transition-property: fill stroke color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-burger:hover,
 .nav-burger:focus {
