--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
           <span class="slider round"></span>
         </label>
         <svg class="tab-hidden ico-burger" width="28" height="28">
-          <use href="./images/sprite.svg#icon-align-left"></use>
+          <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
       </li>
       <li class="mob-hidden">
