--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -9,7 +9,7 @@
       <div class="book-info-container">
         <img class="book-image" />
         <div class="book-information">
-          <h2 class="book-title"></h2>
+          <h2 class="book-title-pop"></h2>
           <h3 class="book-author"></h3>
           <p class="book-description"></p>
           <div class="book-store-links">
