add shoplist css

--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,12 +1,17 @@
 <section class="section">
-  <div class="">
+  <div class="shopping-list-div">
     <h1 class="best-sellers">Shopping <span class="title-color">List</span></h1>
     <p class="loader hidden"></p>
-    <div class="empty-shopping-list-img">
+    <div class="empty-shopping-list-div">
       <p class="empty-shopping-list-msg">
         This page is empty, add some books and proceed to order.
       </p>
-      <img src="./images/img-for-shoplist.svg" width="322px" height="241px" />
+      <img
+        class="empty-shopping-list-img"
+        src="./images/img-for-shoplist.svg"
+        width="265"
+        height="198"
+      />
     </div>
     <div class="js-books-container"></div>
   </div>
