--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -15,7 +15,7 @@
           <div class="book-store-links">
             <a class="amazon-link" target="_self">
               <img
-                class="change-color"
+                class="change-color add-hover"
                 srcset="
                   ./images/amazon-1x-min.png 1x,
                   ./images/amazon-2x-min.png 2x
