--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -54,6 +54,7 @@
         <button class="add-to-list-button" type="button">
           <span class="button-popup-text">ADD TO SHOPING LIST</span>
         </button>
+        <p class="book-adding-text hidden">Сongratulations! You have added the book to the shopping list. To delete, press the button “Remove from the shopping list”.</p>
       </div>
     </div>
   </div>
