--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section pos-scroll">
   <div class="books">
     <h1 class="best-sellers">
       Best Sellers <span class="title-color">Books</span>
@@ -6,4 +6,11 @@
     <p class="loader hidden"></p>
     <div class="js-books"></div>
   </div>
+  <button id="btnToTop" class="scroll-btn scrollToTop">
+    <a href="#top">
+      <svg class="scroll-to-up">
+        <use href="./images/sprite.svg#icon-up"></use>
+      </svg>
+    </a>
+  </button>
 </section>
