--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="top">
   <nav class="nav">
     <ul class="nav-list nav-container">
       <li class="nav-item">
