--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -8,7 +8,7 @@
   </div>
   <button id="btnToTop" class="scroll-btn scrollToTop">
     <a href="#top">
-      <svg class="scroll-to-up">
+      <svg class="scroll-to-up" width="54" height="54">
         <use href="./images/sprite.svg#icon-up"></use>
       </svg>
     </a>
