--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -87,18 +87,12 @@
   height: 36px;
 }
 .change-color {
-  filter: grayscale();
+  filter: grayscale(1);
 }
-/* .add-hover {
-  background: url(../images/amazon-2x-min.png);
-  background-size: cover;
-} */
-.add-hover:hover {
-  /* background-image: url(../images/amazon-hover-2x-min.png); */
-  /* background-size: cover; */
-  /* lightgray: 0.741px 0px / 97.61% 100% no-repeat; */
-  /* box-shadow: 0px 3px 3px 0px rgba(0, 0, 0, 0.15); */
+.change-color:hover {
+  filter: grayscale(1) drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.2));
 }
+
 .button-center {
   display: flex;
   justify-content: center;
