--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -13,6 +13,6 @@
         height="198"
       />
     </div>
-    <div class="js-books-container"></div>
+    <div class="js-books shop"></div>
   </div>
 </section>
