--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -1,53 +1,53 @@
 .empty-shopping-list-div {
- padding: 80px 55px;
+  padding: 80px 55px;
 }
 .empty-shopping-list-msg {
   text-align: center;
   margin-bottom: 14px;
   color: rgb(0, 0, 0, 0.6);
 }
-.empty-shopping-list-img{
+.empty-shopping-list-img {
   width: 265px;
   height: 198px;
 }
-.js-books-container{
+.js-books.shop {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-bottom: 20px;
 }
-.book-card{
+.book-card {
   width: 100%;
   height: 170px;
   padding: 14px;
   border: 2px solid;
   border-radius: 16px;
-  border-color: #4F2EE8;
+  border-color: #4f2ee8;
 }
-.book-card-image{
+.book-card-image {
   width: 100px;
   height: 142px;
   border: none;
   border-radius: 8px;
 }
-.book-card-title{
+.book-card-title {
   font-size: 16px;
   font-weight: 700;
 }
-.book-card-category{
+.book-card-category {
   font-size: 12px;
-  color: #B4AFAF;
+  color: #b4afaf;
 }
-.book-card-description{
+.book-card-description {
   width: 193px;
   height: 68px;
 }
-.book-card-author{
+.book-card-author {
   font-size: 12px;
   font-style: italic;
-  color: #B4AFAF;
+  color: #b4afaf;
 }
-.book-card-links{
+.book-card-links {
   display: flex;
   gap: 8px;
 }
@@ -58,18 +58,18 @@
     padding-inline: auto;
     margin-inline: auto;
   }
-  
+
   .empty-shopping-list-msg {
     font-size: 18px;
     margin-bottom: 20px;
   }
-  
+
   .empty-shopping-list-img {
     width: 322px;
     height: 241px;
   }
-  .js-books-container{
-     margin-bottom: 40px;
+  .js-books.shop {
+    margin-bottom: 40px;
   }
   .book-card {
     height: 213px;
@@ -89,7 +89,7 @@
 }
 
 @media screen and (min-width: 1440px) {
-  .shopping-list-div{
+  .shopping-list-div {
     width: 996px;
   }
   .book-card-description {
