--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -17,12 +17,31 @@
   margin-bottom: 20px;
 }
 .book-card{
+  display: flex;
+  justify-content: space-between;
+  gap: 14px;
   width: 100%;
   height: 170px;
   padding: 14px;
   border: 2px solid;
   border-radius: 16px;
   border-color: #4F2EE8;
+}
+.book-card-info{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.book-card-hero{
+  display: flex;
+  gap: 18px;
+  justify-content: space-between;
+  align-items: center;
+}
+.book-card-footer{
+  display: flex;
+  justify-content: space-between;
+  gap: ;
 }
 .book-card-image{
   width: 100px;
@@ -74,6 +93,7 @@
   .book-card {
     height: 213px;
     padding: 24px;
+    gap: 24px;
   }
   .book-card-image {
     width: 116px;
