--- a/src/css/common.css
+++ b/src/css/common.css
@@ -38,7 +38,7 @@ img {
 
 body {
     margin: 0;
-    font-family: 'DM+Sans', sans-serif;
+    font-family: 'DM Sans', sans-serif;
     font-size: 14px;
     font-weight: 400;
     color: #111111;
