--- a/src/css/general.css
+++ b/src/css/general.css
@@ -7,6 +7,27 @@
   padding-bottom: 80px;
 }
 
+@font-face {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../fonts/DMSans-Regular.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  src: url(../fonts/DMSans-Medium.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 700;
+  src: url(../fonts/DMSans-Bold.ttf) format('truetype');
+}
+
+
+
 @media screen and (min-width: 375px) {
   .container {
     width: 375px;
