--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -95,6 +95,8 @@
 
 .button-center {
   display: flex;
+  flex-direction: column;
+  gap: 8px;
   justify-content: center;
 }
 
@@ -117,6 +119,10 @@
   background-color: #4f2ee8;
   border: none;
   color: #ffffff;
+}
+.book-adding-text{
+  width: 242px;
+  font-size: 10px;
 }
 
 @media screen and (min-width: 768px) {
@@ -166,4 +172,8 @@
     font-size: 18px;
     font-weight: 700;
   }
+    .book-adding-text {
+      width: 324px;
+      font-size: 12px;
+    }
 }
