--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -122,6 +122,8 @@
   align-items: flex-start;
   gap: 16px;
   padding: 183px 123px;
+  position: absolute;
+  z-index: 3;
 }
 
 .logout-button {
@@ -162,6 +164,7 @@
   bottom: 0;
   width: 100%;
   z-index: 1;
+  display: block;
 }
 
 /* @media screen and (min-width: 768px) {
