--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -16,7 +16,8 @@
   gap: 20px;
   margin-bottom: 20px;
 }
-.book-card{
+.book-card {
+  position: relative;
   display: flex;
   justify-content: space-between;
   gap: 14px;
@@ -28,48 +29,96 @@
   border-radius: 16px;
   border-color: #4f2ee8;
 }
-.book-card-info{
+.book-card-info {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
-.book-card-hero{
+.book-card-hero {
   display: flex;
   gap: 18px;
   justify-content: space-between;
   align-items: center;
 }
-.book-card-footer{
+.book-card-footer {
+  width: 193px;
   display: flex;
   justify-content: space-between;
+  gap: 8px;
 }
-.book-card-image{
+.book-card-image {
   width: 100px;
   height: 142px;
   border: none;
   border-radius: 8px;
 }
 .book-card-title {
+  width: 144px;
+  height: 18px;
   font-size: 16px;
   font-weight: 700;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .book-card-category {
+  width: 165px;
+  height: 14px;
   font-size: 12px;
   color: #b4afaf;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .book-card-description {
   width: 193px;
   height: 68px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .book-card-author {
+  width: 100px;
   font-size: 12px;
   font-style: italic;
   color: #b4afaf;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .book-card-links {
   display: flex;
   gap: 8px;
 }
+
+.img-shoplist-cards {
+  filter: grayscale(1);
+  height: 16px;
+  width: 16px;
+}
+.img-shoplist-cards-amazon {
+  filter: grayscale(1);
+  height: 11px;
+  width: 32px;
+}
+.img-shoplist-cards:hover,
+.img-shoplist-cards:focus {
+  filter: grayscale(1) drop-shadow(0 3px 3px #0003);
+}
+
+.book-card-remove {
+  position: absolute;
+  right: 14px;
+  top: 14px;
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  border: none;
+  background-color: #4f2ee8;
+}
+
 @media screen and (min-width: 768px) {
   .empty-shopping-list-div {
     width: 349px;
@@ -94,6 +143,8 @@
     height: 213px;
     padding: 24px;
     gap: 24px;
+    border-color: rgba(79, 46, 232, 0.4);
+    border-width: 2px;
   }
   .book-card-image {
     width: 116px;
@@ -102,9 +153,36 @@
   .book-card-description {
     width: 508px;
     height: 53px;
+    white-space: wrap;
   }
   .book-card-links {
     gap: 16px;
+  }
+  .book-card-title {
+    width: max-content;
+  }
+  .book-card-category {
+    width: max-content;
+  }
+  .book-card-footer {
+    width: auto;
+  }
+  .book-card-author {
+    width: auto;
+  }
+  .img-shoplist-cards {
+    height: 30px;
+    width: 32px;
+  }
+  .img-shoplist-cards-amazon {
+    height: 15px;
+    width: 48px;
+  }
+  .book-card-remove {
+    right: 24px;
+    top: 24px;
+    width: 34px;
+    height: 34px;
   }
 }
 
