change shop-icons in js

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -24,7 +24,6 @@
                 alt="Amazon Logo"
               />
             </a>
-
             <a class="applebooks-link" target="_self">
               <img
                 class="change-color"
@@ -54,7 +53,10 @@
         <button class="add-to-list-button" type="button">
           <span class="button-popup-text">ADD TO SHOPING LIST</span>
         </button>
-        <p class="book-adding-text hidden">Сongratulations! You have added the book to the shopping list. To delete, press the button “Remove from the shopping list”.</p>
+        <p class="book-adding-text hidden">
+          Сongratulations! You have added the book to the shopping list. To
+          delete, press the button “Remove from the shopping list”.
+        </p>
       </div>
     </div>
   </div>
