--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -57,6 +57,9 @@
   font-size: 12px;
   color: #b4afaf;
 }
+.book-card-remove-icon{
+  z-index: 5;
+}
 .book-card-description {
   width: 193px;
   height: 68px;
