--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -13,7 +13,7 @@
           <h3 class="book-author"></h3>
           <p class="book-description"></p>
           <div class="book-store-links">
-            <a class="amazon-link" target="_self">
+            <a class="amazon-link" target="_blank">
               <img
                 class="change-color add-hover"
                 srcset="
@@ -24,7 +24,7 @@
                 alt="Amazon Logo"
               />
             </a>
-            <a class="applebooks-link" target="_self">
+            <a class="applebooks-link" target="_blank">
               <img
                 class="change-color"
                 srcset="
@@ -35,7 +35,7 @@
                 alt="Openbook Logo"
               />
             </a>
-            <a class="bookshop-link" target="_self">
+            <a class="bookshop-link" target="_blank">
               <img
                 class="change-color"
                 srcset="
