--- a/src/css/support.css
+++ b/src/css/support.css
@@ -8,6 +8,9 @@
   background: rgb(79, 46, 232);
   background: linear-gradient(180deg, rgba(79, 46, 232, 1) 0%, rgba(255, 255, 255, 1) 130%);
 }
+.container-support2 {
+  display:none;
+}
 .support-section-title{
     font-family: DM Sans;
     font-size: 28px;
@@ -92,6 +95,7 @@
     height: 472px;
     margin-bottom: 0;
   }
+
   .support-title-div {
     margin-top: 16px;
   }
@@ -113,7 +117,16 @@
     width: 356px;
     height: 490px;
   }
-
+.container-support2 {
+  display: flex;
+  flex-direction: column;
+  width: 356px;
+  height: 490px;
+  margin-bottom: 40px;
+  border-radius: 16px;
+  background: rgb(79, 46, 232);
+  background: linear-gradient(180deg, rgba(79, 46, 232, 1) 0%, rgba(255, 255, 255, 1) 130%);
+}
   .donation-organisation-list{
     margin-bottom: 40px;
   }
