--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,3 +1,34 @@
-<section class="container">
-  <div></div>
+
+<section class="section footer" id="footer">
+  <div class="container footer-wrap">
+  
+<ul class="site-nav">
+  <li class="item">
+  <a class="main-logo" href="./index.html">
+    <svg width="84" height="84">
+      <use href="./images/sprite.svg#icon-logo"></use>
+    </svg>
+    <svg class="logo-bookshelf" width="100" height="23">
+      <use href="./images/sprite.svg#icon-bookshelf"></use>
+    </svg>
+  </a>
+</li>
+  <li class="item">
+    <a class="nav-link" href="./index.html" data-action="index">Home</a>
+  </li>
+  <li class="item">
+    <a
+      class="nav-link"
+      href="./shopping-list.html"
+      data-action="shopping-list"
+      >Shopping list
+      <svg class="shopping-bag swg" width="20" height="20">
+        <use href="./images/sprite.svg#icon-shop"></use>
+      </svg>
+    </a>
+  </li>
+ 
+</ul>
+  </div>
+  
 </section>
