--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -15,7 +15,7 @@
           <div class="book-store-links">
             <a class="amazon-link" target="_blank">
               <img
-                class="change-color add-hover"
+                class="change-color fix-amazon add-hover"
                 srcset="
                   ./images/amazon-1x-min.png 1x,
                   ./images/amazon-2x-min.png 2x
@@ -54,7 +54,8 @@
           <span class="button-popup-text">ADD TO SHOPPING LIST</span>
         </button>
         <p class="book-adding-text hidden">
-          Congratulations! You have added the book to the shopping list. To delete, press the button "Remove from the shopping list".
+          Congratulations! You have added the book to the shopping list. To
+          delete, press the button "Remove from the shopping list".
         </p>
       </div>
     </div>
