--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -114,6 +114,7 @@
 
 .book-card-remove {
   position: absolute;
+  padding: 6px;
   right: 14px;
   top: 14px;
   width: 28px;
@@ -122,10 +123,7 @@
   display: flex;
   align-items: center;
   border: none;
-  background-color: #4f2ee8;
-}
-.book-card-remove-icon {
-  z-index: 100;
+  background-color: #4F2EE8;
 }
 
 @media screen and (min-width: 768px) {
