change position and add link to shopping list

--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -36,6 +36,7 @@
         <use href="./images/sprite.svg#icon-caret-down"></use>
       </svg>
     </button>
+
     <div class="menu-nav-main">
       <a class="name-menu-home" href="./index.html" data-action="index">Home</a>
       <a
@@ -63,7 +64,7 @@
     <source srcset="./images/groupbooks-2x.png 2x" type="image/png" />
     <img
       src="./images/groupbooks-1x.png"
-      alt="Опис зображення"
+      alt="Group books"
       class="overlay-image"
     />
   </picture>
