--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -6,7 +6,10 @@
   width: 100%;
   height: 100%;
   background: #fff;
+  background-repeat: no-repeat;
+  background-position-y: bottom;
   z-index: 9999;
+  min-height: 100vh;
 }
 .nav-burger {
   fill: currentColor;
@@ -121,7 +124,11 @@
   justify-content: center;
   align-items: flex-start;
   gap: 16px;
-  padding: 183px 123px;
+  top: 183px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  z-index: 3;
 }
 
 .logout-button {
@@ -162,6 +169,7 @@
   bottom: 0;
   width: 100%;
   z-index: 1;
+  display: block;
 }
 
 /* @media screen and (min-width: 768px) {
