--- a/src/css/all-books.css
+++ b/src/css/all-books.css
@@ -86,11 +86,12 @@
 /* style btn to scroll up */
 #btnToTop {
   position: absolute;
-  bottom: 120px;
+  bottom: 90;
   right: 4px;
   width: 54px;
   height: 54px;
 }
+
 .pos-scroll {
   position: relative;
   padding-bottom: 10px;
@@ -102,9 +103,4 @@
   background: transparent;
   align-self: center;
   margin-bottom: 20px;
-}
-@media screen and (min-width: 768px) {
-  #btnToTop {
-    display: none;
-  }
 }
