--- a/src/css/support.css
+++ b/src/css/support.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 335px;
-  height: 332px;
+  height: 356px;
   margin-bottom: 40px;
   border-radius: 16px;
   background: rgb(79, 46, 232);
@@ -93,13 +93,11 @@
 .hidden-scroll-support {
   display: none;
 }
-
 @media screen and (min-width: 768px) {
   .container-support {
     height: 472px;
     margin-bottom: 0;
   }
-
   .support-title-div {
     margin-top: 16px;
   }
@@ -143,6 +141,7 @@
   }
 }
 
-.support-mobile {
-  height: 358px;
+.support-item:nth-child(3) > a > img {
+  height: 20px;
+  width: 150px;
 }
