--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -6,10 +6,7 @@
   width: 100%;
   height: 100%;
   background: #fff;
-  background-repeat: no-repeat;
-  background-position-y: bottom;
-  z-index: 9999;
-  min-height: 100vh;
+  z-index: 2;
 }
 .nav-burger {
   fill: currentColor;
@@ -167,16 +164,13 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 100%;
-  z-index: 1;
+  min-width: 100%;
   display: block;
+  max-height: calc(100% - 215px);
 }
 
 /* @media screen and (min-width: 768px) {
-  .menu-main-part {
-    display: none;
-  }
-  .nav-contaier-menu {
+  .burger-menu {
     display: none;
   }
 } */
