--- a/src/css/header.css
+++ b/src/css/header.css
@@ -48,23 +48,15 @@
 .nav-link.current {
   background: #eac645;
 }
-
-/* for dark theme */
-/* .logo-bookshelf {
-  fill: rgba(243, 243, 243, 1);
-} */
-
 .ico-burger {
   stroke: currentColor;
-  transition-property: fill stroke color;
+  transition-property: stroke;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ico-burger:hover,
 .ico-burger:focus {
-  stroke: rgba(79, 46, 232, 1);
-  fill: #4f2ee8;
-  color: #4f2ee8;
+  stroke: #4f2ee8;
 }
 .main-nav-block {
   margin-left: 34px;
