--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -14,15 +14,13 @@
 .nav-burger {
   fill: currentColor;
   stroke: currentColor;
-  transition-property: fill stroke color;
+  transition-property: stroke;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-burger:hover,
 .nav-burger:focus {
-  fill: #4f2ee8;
   stroke: #4f2ee8;
-  color: #4f2ee8;
 }
 
 .burger-menu.show {
