--- a/src/css/support.css
+++ b/src/css/support.css
@@ -54,7 +54,7 @@
   color: white;
 }
 .support-image {
-  height: 100%;
+  /* height: 100%; */
   color: #ffffff;
   filter: brightness(0) invert(1);
 }
