--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,4 +1,4 @@
-<section class="section pos-scroll">
+<div class="section pos-scroll">
   <div class="books">
     <h1 class="best-sellers">
       Best Sellers <span class="title-color">Books</span>
@@ -6,4 +6,4 @@
     <p class="loader hidden"></p>
     <div class="js-books"></div>
   </div>
-</section>
+</div>
