--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -44,7 +44,7 @@
           <svg class="user-icon" width="37" height="37">
             <use href="./images/sprite.svg#icon-user"></use>
           </svg>
-          <p class="user-name">User</p>
+          <span class="user-name">User</span>
           <svg class="" width="23" height="26">
             <use href="./images/sprite.svg#icon-caret-down"></use>
           </svg>
