--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,4 +1,4 @@
-<section class="section">
+<div class="section">
   <div class="shopping-list-div">
     <h1 class="best-sellers">Shopping <span class="title-color">List</span></h1>
     <p class="loader hidden"></p>
@@ -15,4 +15,4 @@
     </div>
     <div class="js-books shop"></div>
   </div>
-</section>
+</div>
