--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,4 +1,4 @@
-<section class="support">
+<div class="support">
   <div class="container-support">
     <div class="support-title-div">
       <h2 class="support-section-title">Support Ukraine</h2>
@@ -7,8 +7,8 @@
         srcset="./images/support10.png 1x, ./images/support10-2x.png 2x"
         src="./images/support10.png"
         alt="UkraineEmblem"
-        width="20px"
-        height="32px"
+        width="20"
+        height="32"
       />
     </div>
     <ul class="donation-organisation-list"></ul>
@@ -21,4 +21,4 @@
       </svg>
     </button>
   </div>
-</section>
+</div>
