--- a/src/partials/all-categories.html
+++ b/src/partials/all-categories.html
@@ -1,6 +1,6 @@
-<section class="section">
+<div class="section">
   <div class="categories">
     <p class="loader"></p>
     <div class="js-category-block"></div>
   </div>
-</section>
+</div>
