--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,4 +1,4 @@
-<section class="section">
+<div class="section">
   <div class="popup-modal-background hidden">
     <div class="popup-modal">
       <button class="popup-modal-close-button" type="button">
@@ -9,8 +9,8 @@
       <div class="book-info-container">
         <img class="book-image" />
         <div class="book-information">
-          <h2 class="book-title-pop"></h2>
-          <h3 class="book-author"></h3>
+          <p class="book-title-pop"></p>
+          <p class="book-author"></p>
           <p class="book-description"></p>
           <div class="book-store-links">
             <a class="amazon-link" target="_blank">
@@ -60,4 +60,4 @@
       </div>
     </div>
   </div>
-</section>
+</div>
