fix validator errors

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -7,13 +7,13 @@
         </svg>
       </button>
       <div class="book-info-container">
-        <img class="book-image" />
+        <img class="book-image" src="#" alt="#" />
         <div class="book-information">
           <p class="book-title-pop"></p>
           <p class="book-author"></p>
           <p class="book-description"></p>
           <div class="book-store-links">
-            <a class="amazon-link" target="_blank">
+            <a class="amazon-link" target="_blank" href="#">
               <img
                 class="change-color fix-amazon add-hover"
                 srcset="
@@ -24,7 +24,7 @@
                 alt="Amazon Logo"
               />
             </a>
-            <a class="applebooks-link" target="_blank">
+            <a class="applebooks-link" target="_blank" href="#">
               <img
                 class="change-color"
                 srcset="
@@ -35,7 +35,7 @@
                 alt="Openbook Logo"
               />
             </a>
-            <a class="bookshop-link" target="_blank">
+            <a class="bookshop-link" target="_blank" href="#">
               <img
                 class="change-color"
                 srcset="
