--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,10 +31,12 @@
       </li>
 
       <li class="nav-item">
-        <label class="switch">
-          <input type="checkbox" />
-          <span class="slider round"></span>
-        </label>
+        <form action="#">
+          <label class="switch">
+            <input type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+        </form>
         <svg class="tab-hidden ico-burger" width="28" height="28">
           <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
