--- a/src/css/all-books.css
+++ b/src/css/all-books.css
@@ -7,7 +7,7 @@
   color: #4f2ee8;
 }
 .topbook-title {
-  color: #b4afaf;
+  color: #3B3B3B;
   margin-bottom: 18px;
 }
 .topbooks-list {
@@ -34,7 +34,7 @@
   font-size: 12px;
   font-weight: 400;
   font-style: italic;
-  color: #b4afaf;
+  color: #3B3B3B;
 }
 .btn-div {
   display: flex;
