--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -79,7 +79,7 @@ body.modal-open {
   font-size: 12px;
   font-style: italic;
   font-weight: 400;
-  color: #b4afaf;
+  color: #3B3B3B;
   margin-bottom: 18px;
 }
 .book-description {
