--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -64,7 +64,7 @@
   width: 165px;
   height: 14px;
   font-size: 12px;
-  color: #b4afaf;
+  color: #3B3B3B;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -83,7 +83,7 @@
   width: 100px;
   font-size: 12px;
   font-style: italic;
-  color: #b4afaf;
+  color: #3B3B3B;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
