--- a/src/css/darkmode-theme.css
+++ b/src/css/darkmode-theme.css
@@ -63,7 +63,7 @@
   stroke: #ffffff;
   /* fill: #ffffff;
   color: #ffffff; */
-  filter: brightness(0) invert(1);
+  /* filter: brightness(0) invert(1); */
 }
 .darkmode .popup-modal {
   border: 2px solid;
