--- a/src/css/support.css
+++ b/src/css/support.css
@@ -56,7 +56,7 @@
 .support-image {
   /* height: 100%; */
   color: #ffffff;
-  filter: brightness(0) invert(1);
+  /* filter: brightness(0) invert(1); */
 }
 
 .scroll-btn {
